--- a/main.html
+++ b/main.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<!-- the entire body must be written by student -->
-<div>
-	<p><b>"Welcome to the world of Web development"</b></p>
-</div>
+	<div id="text"><b>"Welcome to the world of Web development"</b></div>
 
     <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
-
 </html>
